@@ -75,11 +75,9 @@ Requirements
     pygtk2 >= 2.8
     python >= 2.4
     pygtk2-libglade >= 2.8
-    pyorbit >= 2.14
     at-spi >= 1.7
     gnome-python2 >= 2.12
     glib2 >= 2.10
-    gnome-python2-bonobo >= 2.12
     GConf2-devel
 
   On a Debian based distro:
@@ -89,7 +87,6 @@ Requirements
     python-gtk2 >= 2.8
     python-glade2 >= 2.8
     python >= 2.4
-    python-pyorbit >= 2.14
     python-pyatspi
     at-spi >= 1.7
     libgconf2-dev
