@@ -22,11 +22,9 @@ Requires: gnome-python2-libwnck >= 2.14
 Requires: pygtk2 >= 2.8
 Requires: python >= 2.4
 Requires: pygtk2-libglade >= 2.8
-Requires: pyorbit >= 2.14
 Requires: at-spi >= 1.7
 Requires: gnome-python2 >= 2.12
 Requires: glib2 >= 2.10
-Requires: gnome-python2-bonobo >= 2.12
 
 %description
 An interactive Python accessibility explorer.
