@@ -2,7 +2,7 @@ Source: accerciser
 Section: devel
 Priority: optional
 Maintainer: Luke Yelavich <themuso@ubuntu.com>
-Build-Depends: debhelper (>= 5.0.0), python-dev (>= 2.4), python-pyorbit-dev (>= 2.0), libglib2.0-dev, libbonobo2-dev, python-gtk2-dev, python-gnome2-dev, autotools-dev, python-central (>= 0.5)
+Build-Depends: debhelper (>= 5.0.0), python-dev (>= 2.4), libglib2.0-dev, python-gtk2-dev, python-gnome2-dev, autotools-dev, python-central (>= 0.5)
 XS-Python-Version: current, >= 2.4
 Standards-Version: 3.7.2
 
