@@ -1,3 +1,13 @@
+2009-05-02  Eitan Isaacson  <eitan@ascender.com>
+
+	* README: 
+	* accerciser.spec.in: 
+	* debian/control: 
+	* macaroon/pyreqs.py: 
+	* pyreqs.py: Removed bonobo and ORBit2 dependencies. Accerciser
+	does not depend on them directly, and they will be deprecated in
+	GNOME 3.0 (bug #580421).
+
 2009-04-13 Brian G. Merrell <bgmerrell@novell.com>
 
 	* NEWS:
